UI and report books changes
add books to db;
order books catalog alphabetically;
add view for reported books and remove books from reported for admin

--- a/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Shared/_Layout.cshtml
@@ -37,8 +37,9 @@
                                         <a style="color:grey !important;" class="border-top-left-right" asp-controller="Book" asp-action="NewBook">Add Book</a>
                                         @*<a asp-controller="Book" asp-action="NewBook">Add Genre</a>*@
                                         <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Author" asp-action="NewAuthor">Add Author</a>
-                                        <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Author" asp-action="NewAuthor">Add Genre</a>
-                                        <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Author" asp-action="NewAuthor">Add Language</a>
+                                        <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Genre" asp-action="NewGenre">Add Genre</a>
+                                        <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Language" asp-action="NewLanguage">Add Language</a>
+                                        <a style="color:grey !important;" class="border-bottom-left-right" asp-controller="Catalog" asp-action="ViewReportedBooks">Reported Books</a>
                                     }
                                     else
                                     {
