--- a/Web/OnlineBookshop.Web/Views/Catalog/ViewReportedBooks.cshtml
+++ b/Web/OnlineBookshop.Web/Views/Catalog/ViewReportedBooks.cshtml
@@ -83,7 +83,7 @@
                     @foreach (var book in Model.Books)
                     {
                         <div class="book-info-summary">
-                            <img src="@book.CoverUrl" class="book-cover" alt="cover">
+                            <a asp-controller="Book" asp-action="ViewBook" asp-route-bookId="@book.Id" style="height:100%;"><img src="@book.CoverUrl" class="book-cover" alt="cover"></a>
                             <div class="book-short-info">
                                 <div>
                                     <div class="book-title">@book.Title</div>
@@ -115,8 +115,6 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a hidden="hidden" id="view-book-@book.Id" type="button" class="view-book-button-link" asp-controller="Book" asp-action="ViewBook" asp-route-bookId="@book.Id">Details</a>
-                                    <button type="button" class="view-book-button" onclick="document.getElementById('view-book-@book.Id').click()"><i class="fa fa-info-circle" aria-hidden="true"></i></button>
                                     <a hidden="hidden" id="remove-report-book-@book.Id" type="button" class="remove-report-book-link" asp-controller="Book" asp-action="RemoveBookFromReported" asp-route-bookId="@book.Id">Remove from reported</a>
                                     <button type="button" class="remove-report-button" onclick="document.getElementById('remove-report-book-@book.Id').click()">
                                         <i class="fa fa-times" aria-hidden="true"></i>
